--- a/coming-soon-main/index.html
+++ b/coming-soon-main/index.html
@@ -5,7 +5,7 @@
     <link rel="icon" type="image/svg+xml" href="/icon.svg" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Coming Soon</title>
-    <meta name="description" content="We're working on something new" />
+    <meta name="description" content="We're working on something BASED" />
     <meta name="keywords" content="coming soon, new, website, launch" />
   </head>
   <body>
